import grpc from "@grpc/grpc-js";
import protoLoader from "@grpc/proto-loader";
import path from "path";
import { fileURLToPath } from "url";

const __filename = fileURLToPath(import.meta.url);
const __dirname = path.dirname(__filename);

const PROTO_PATH = path.join(__dirname, "inventario.proto");

const packageDefinition = protoLoader.loadSync(PROTO_PATH, {
  keepCase: true,
  longs: String,
  enums: String,
  defaults: true,
  oneofs: true,
});

const inventarioProto =
  grpc.loadPackageDefinition(packageDefinition).inventario.v1;

// ImplementaciÃ³n de la lÃ³gica
const checkAndBlock = (call, callback) => {
  console.log(
    `ðŸ”Ž [Inventario] Verificando vehÃ­culo: ${call.request.vehiculoId}`
  );

  // Simulamos lÃ³gica: Si el ID termina en '99', decimos que NO hay stock.
  const isAvailable = !call.request.vehiculoId.endsWith("99");

  if (isAvailable) {
    console.log("âœ… Disponible. Bloqueado.");
    callback(null, { ok: true, bloqueId: "BLK-" + Date.now() });
  } else {
    console.log("âŒ No disponible.");
    callback(null, { ok: false, reason: "VehÃ­culo en mantenimiento" });
  }
};

const server = new grpc.Server();
server.addService(inventarioProto.InventarioService.service, {
  CheckAndBlock: checkAndBlock,
  ReleaseBlock: (call, cb) => cb(null, { ok: true }), // Dummy implementation
});

const PORT = "0.0.0.0:50051";
server.bindAsync(PORT, grpc.ServerCredentials.createInsecure(), () => {
  console.log(`ðŸ“¦ Servicio de Inventario gRPC corriendo en ${PORT}`);
});
